--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Police@SG</title>
   </head>
   <body>
+    <div id="modal-root"></div>
     <div id="root"></div>
-    <script
-      type="module"
-      src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
